site docs: fix spacing issue with imgs in lists
Paragraphs in lists are set to margin for the sake of
consistent spacing, but this made image margins a bit too
cozy. Images in paragraphs in lists are given some margins
to account for this.

--- a/kdlp.underground.software/style.css
+++ b/kdlp.underground.software/style.css
@@ -228,6 +228,10 @@ li > p {
 	padding: 0;
 }
 
+li > p > img {
+	margin: 1rem auto;
+}
+
 li {
 	padding-top: .4rem;
 }
